# cardtagger-be

./: CMakeLists.txt  conanfile.txt  main.cpp  scrape.cpp  uploaddata.cpp
controllers/: auth_controller.cpp  auth_controller.h  card_controller.cpp  card_controller.h
data/: annotations.json
magique/: card.cpp  card.h  card_delta.cpp  card_delta.h  catalog.cpp  catalog.h
models/: ability.cpp  ability.h  auth.cpp  auth.h
tests/: CMakeLists.txt  auth.cpp  env.h  main.cpp
